# cde_airflow

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yaml
app/: create_schema.py  db_services.py  extract_data.py  load_to_redshift.py  request_api.py  test.py  transform_data.py
data_temp/: 2024-09-30_19-53-35_jobs_data.parquet  2024-10-02_10-22-54_jobs_data.parquet  2024-10-02_10-25-08_jobs_data.parquet  2024-10-06_11-34-00_jobs_data.parquet
etl/app/: extract_data.py
tests/: response-job-category-example.json  response-organization-example.json  test_db_services.py  test_extract_data.py  test_transform_data.py
usa_jobs_etl/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
usa_jobs_etl/airflow/: Dockerfile
usa_jobs_etl/airflow/dags/: etl_dimensions_dag.py
usa_jobs_etl/dags/: drop_schema_dag.py  etl_dimensions_dag.py  etl_fact_dag.py  history_dimensions_dag.py  history_fact_dag.py
usa_jobs_etl/data_temp/: 2024-10-06_11-08-38_position_types_data.parquet  2024-10-14_14-05-50_organizations_data.parquet  test_jobs_data.parquet
usa_jobs_etl/etl/: requirements.txt  transform_data.py
usa_jobs_etl/etl/tests/: test_db_services.py  test_extract_data.py  test_transform_data.py
usa_jobs_etl/plugins/etl/: db_services.py  extract_data.py  load_to_redshift.py  request_api.py  request_apis.py  transform_data.py
usa_jobs_etl/tests/: response-jobs-example.json  response-position-types-example.json  test_db_services.py  test_extract_data.py  test_transform_data.py
(+4 files in other folders)
